--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,13 +24,20 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
+# Automatically generate index.html for all subfolders
+      - name: Generate Directory Index
+        uses: gacts/directory-listing@v1
+        with:
+          target: . # Scans the root for all project folders
+          ignore: ".github, .git" # Excludes hidden system folders
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: '.' # Uploads the entire repo including the new index.html
+
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v4
