--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,33 +1,20 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
-
-# Controls when the workflow will run
+name: Deploy Portfolio Index
 on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
-    branches: [ "master" ]
-  permissions:
-    contents: read
-    pages: write
-    id-token: write
- 
+    branches: ["main"] # Or your default branch
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
-# Automatically generate index.html for all subfolders
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      # Automatically generate index.html for all subfolders
       - name: Generate Directory Index
         uses: gacts/directory-listing@v1
         with:
